Update CUSTOMER SUPPORT ANALYTICS.ipynb

--- a/CUSTOMER SUPPORT ANALYTICS.ipynb
+++ b/CUSTOMER SUPPORT ANALYTICS.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# A company is trying to understand how to improve the quality of 1:1 customer support. Use the to explore support ticket data and develop suggestions for the business. For each ticket, customers are asked to rate their experience on a scale of 1 to 5 (1 is the worst; 3 is neutral; 5 is the best). This survey response is recorded in the SURVEY_SCORE column."
+    "# A company is trying to understand how to improve the quality of 1:1 customer support. Use the explore support ticket data and develop suggestions for the business. For each ticket, customers are asked to rate their experience on a scale of 1 to 5 (1 is the worst; 3 is neutral; 5 is the best). This survey response is recorded in the SURVEY_SCORE column."
    ]
   },
   {
