Update CUSTOMER SUPPORT ANALYTICS.ipynb

--- a/CUSTOMER SUPPORT ANALYTICS.ipynb
+++ b/CUSTOMER SUPPORT ANALYTICS.ipynb
@@ -305,7 +305,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##I am developing a new column TOTAL_MIN with a combination of chats, chatbots, emails and call lengths. This is to easen my analysis for the typical handle time down the line per support channel and comparing per user type. I replaced NaN values with 0 in order to avoid having NaN values in the new column - TOTAL_MIN. "
+    "##I am developing a new column TOTAL_MIN with a combination of chats duration and call lengths. This is to easen my analysis for the typical handle time down the line per support channel and comparing per user type. I replaced NaN values with 0 in order to avoid having NaN values in the new column - TOTAL_MIN. "
    ]
   },
   {
